8.NoSQL/300151825/300151825-db.txt
  File "/home/runner/work/INF1099-201-26H-04/INF1099-201-26H-04/8.NoSQL/300151825/app.py", line 48
    "@
    ^
SyntaxError: unterminated string literal (detected at line 48)
